<?xml version="1.0" encoding="utf-8"?><!--It's layout design for Forgot password screen for mobile devices-->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools">

    <data>

        <variable
            name="forgetpwdviewModel"
            type="com.photon.medline.epicModules.authentication.forgotpassword.view.ui.ForgotPwdViewModel" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        bind:ignore="MissingConstraints">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_39dp"
            android:layout_marginStart="@dimen/_5dp"
            android:layout_marginTop="@dimen/_22dp"
            android:layout_marginEnd="@dimen/_21dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/forgot_password_back_button"
                    android:layout_width="@dimen/_39dp"
                    android:layout_height="@dimen/_39dp"
                    android:onClick="@{()->forgetpwdviewModel.closeActivity()}"
                    android:padding="@dimen/_5dp"
                    android:src="@drawable/ic_baseline_arrow_back_24"
                    android:visibility="@{forgetpwdviewModel.successEmailEnable?View.GONE:View.VISIBLE}" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/logo_forgot_password_screen"
                    android:layout_width="@dimen/_108dp"
                    android:layout_height="@dimen/_38dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_header_logo_sm" />

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_21dp"
            android:layout_marginTop="@dimen/_36dp"
            android:layout_marginEnd="@dimen/_21dp"
            android:visibility="@{forgetpwdviewModel.successEmailEnable?View.GONE:View.VISIBLE}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_forgot_title"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_40dp"
                android:fontFamily="@font/globerbold"
                android:gravity="center_horizontal"
                android:text="@string/title_forget_password"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/_27sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_forgot_text"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_20dp"
                android:layout_centerInParent="true"
                android:fontFamily="@font/opensansregular"
                android:gravity="center_horizontal"
                android:text="@string/text_forget_password"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/textsize_15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_forgot_title" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_forgot_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50dp"
                android:layout_marginTop="@dimen/dimen_26dp"
                android:background="@{forgetpwdviewModel.forgetEmail?@drawable/red_corner_rectangle:@drawable/corner_ractangle}"
                android:fontFamily="@font/opensansregular"
                android:hint="@string/hint_email"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:onTextChanged="@{forgetpwdviewModel::onForgetPwdEmailTextChangeListener}"
                android:paddingLeft="@dimen/_12dp"
                android:singleLine="true"
                android:text="@={forgetpwdviewModel.forgotPwdModel.email}"
                android:textColor="@color/color_333333"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_forgot_text" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/forgot_email_error"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_19dp"
                android:layout_marginTop="@dimen/_5dp"
                android:fontFamily="@font/opensansregular"
                android:paddingLeft="@dimen/_1dp"
                android:text="@string/email_error"
                android:textColor="@color/error_text"
                android:textSize="@dimen/_14sp"
                android:visibility="@{forgetpwdviewModel.forgetEmail?View.VISIBLE:View.GONE}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_forgot_email" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_forget_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_58dp"
                android:layout_marginTop="@dimen/_50dp"
                android:background="@drawable/blue_corner_ractangle"
                android:enabled="@{forgetpwdviewModel.enableDisableForgetPwdButton}"
                android:fontFamily="@font/opensanssemibold"
                android:onClick="@{()-> forgetpwdviewModel.onSubmitButtonClick()}"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_17sp"
                app:layout_constraintTop_toBottomOf="@+id/forgot_email_error" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_marginEnd="@dimen/_20dp"
            android:visibility="@{forgetpwdviewModel.successEmailEnable?View.VISIBLE:View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/success"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/globerbold"
                android:gravity="center"
                android:text="@string/great"
                android:textColor="@color/color_36b37e"
                android:textSize="@dimen/_27sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/success_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensansregular"
                android:gravity="center"
                android:paddingStart="@dimen/_15dp"
                android:paddingEnd="@dimen/_15dp"
                android:text="@string/mailsent"
                android:textColor="@color/text_color"
                android:textSize="@dimen/_15sp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/success" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_continue_login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_58"
                android:layout_marginTop="@dimen/_50dp"
                android:background="@drawable/blue_corner_ractangle"
                android:fontFamily="@font/opensanssemibold"
                android:onClick="@{()-> forgetpwdviewModel.onContinueToLoginButtonClick()}"
                android:text="@string/continue_to_login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_17sp"
                app:layout_constraintTop_toBottomOf="@+id/success_message" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>